--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,52 @@
 alembic==1.7.4
+aniso8601==9.0.1
+blinker==1.4
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
 colorama==0.4.4
+flake8==4.0.1
 Flask==2.0.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.3.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
+flask-rest-paginate==1.1.3
+Flask-RESTful==0.3.9
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
+google-api-core==2.2.1
+google-api-python-client==2.28.0
+google-auth==2.3.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+googleapis-common-protos==1.53.0
 greenlet==1.1.2
+httplib2==0.20.1
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
 Mako==1.1.5
 MarkupSafe==2.0.1
+mccabe==0.6.1
+oauthlib==3.1.1
+protobuf==3.19.1
 psycopg2-binary==2.9.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pyflakes==2.4.0
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-dotenv==0.19.1
+pytz==2021.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.16.0
 SQLAlchemy==1.4.26
+uritemplate==4.1.1
+urllib3==1.26.7
 Werkzeug==2.0.2
